--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -178,7 +178,7 @@
                                             <strong th:text="${shop.name}">서울 대리점</strong>
                                             </a>
                                         </span>
-                                <div class="small" th:text="${shop.address}+${shop.addressDetail}">서울 동대문구 이문동 204-397</div>
+                                <div class="small" th:text="${shop.addr}+${shop.addrDetail}">서울 동대문구 이문동 204-397</div>
                                 <div class="small" th:text="${shop.tel}">02-657-8454</div>
                                 <!--TODO 판매상품 및 키로수 계산-->
                                 <div class="small text-danger dist" th:lon="${shop.lon}" th:lat="${shop.lat}"></div>
@@ -221,7 +221,7 @@
                                             <strong th:text="${shop.name}">서울 대리점</strong>
                                             </a>
                                         </span>
-                                <div class="small" th:text="${shop.address}+${shop.addressDetail}">서울 동대문구 이문동 204-397</div>
+                                <div class="small" th:text="${shop.addr}+${shop.addrDetail}">서울 동대문구 이문동 204-397</div>
                                 <div class="small" th:text="${shop.tel}">02-657-8454</div>
                                 <!--TODO 판매상품 및 키로수 계산-->
                                 <div class="small text-danger dist" th:lon="${shop.lon}" th:lat="${shop.lat}"></div>
