--- a/src/main/resources/templates/shop/agentList.html
+++ b/src/main/resources/templates/shop/agentList.html
@@ -14,17 +14,22 @@
                             <!-- <a th:href="@{read(id=${shop.id})}">-->
                             <h1 class="h4 mb-4" th:text="${shop.name}">서울 대리점</h1>
                             <!--</a>-->
-                            <h2 class="h6">대리점 정보</h2>
                             <address class="mb-0">
                                 <ul class="list-unstyled font-size-14 text-secondary mb-0">
-                                    <li class="py-1" th:text="${shop.address}+${shop.addressDetail}">서울 동대문구 이문동 204-397</li>
+                                    <li class="py-1" th:text="${shop.addr}+${shop.addrDetail}">서울 동대문구 이문동 204-397</li>
                                     <li class="py-1" th:text="${shop.tel}">02-657-8454</li>
                                 </ul>
                             </address>
                         </div>
                         <div class="col-6">
-                            <img class="img-fluid" th:src="@{/img/test/t4.jpg}" alt="Image Description">
+                            <img class="img-thumbnail" th:src="@{/img/test/t4.jpg}" alt="Image Description">
                         </div>
+                    <div class="col-12 row">
+                        <div class="col-4 col-sm-2" th:each="product : ${shop.products}">
+                            <a th:href="@{/product(id=${product.id})}"><img class="img-fluid rounded" th:src="@{/img/test/t4.jpg}" alt="Image Description">
+                            <span class="small text-muted" th:text="${product.name}"></span></a>
+                        </div>
+                    </div>
                     <!-- End Contacts Info -->
                 </div>
                 <div class="col-lg-6">
