--- a/src/main/resources/templates/admin/board.html
+++ b/src/main/resources/templates/admin/board.html
@@ -1,85 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="admin/adminDefault" >
+<head>
+    <!--web editor-->
+    <link th:href="@{/vendor/textareaEditor/summernote-lite.css}" rel="stylesheet">
+    <!--END web editor-->
+</head>
 <section layout:fragment="content">
 
-    <div class="container space-2 space-3--lg">
-        <!--view-->
-        <div th:unless="${modify}or${register}" th:object="${board}">
-            <div class="row" >
-                <span th:text="*{boardName}"></span>
-                <span th:text="*{title}"></span>
-                <span th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}"></span>
-            </div>
-            <div th:text="*{contents}"></div>
-            <a  role="button" class="btn btn-primary" th:href="list">목록</a>
-        </div>
+    <!-- 조회 -->
+    <div th:replace="board/board.html :: board"></div>
+    <!-- 조회 끝-->
 
-        <!--등록-->
-        <div  th:if="${modify}or${register}" class="js-validate rounded p-sm-7 mx-lg-auto" >
-            <!-- Contact Us Form -->
-            <form method="post" th:object="${board}">
-                <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                <input type="hidden" name="status" th:value="1">
-                    <div class="row mb-5">
-                        <div class="col-md-2">
-                            <label class="h6 small d-block text-uppercase mb-3 mb-lg-0">유형:</label>
-                        </div>
-                        <div class="col-md-10">
-                            <select class="custom-select" th:field="*{boardId}" >
-                                <option value="1">공지</option>
-                                <option value="2">뉴스</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <div class="col-md-2">
-                            <label class="h6 small d-block text-uppercase mb-3 mb-lg-0">제목:</label>
-                        </div>
-                        <div class="col-md-10">
-                            <div class="js-form-message">
-                                <div class="js-focus-state input-group form">
-                                    <input class="form-control form__input" type="text" th:field="*{title}" required
-                                           data-msg="Please enter your frist name."
-                                           data-error-class="u-has-error"
-                                           data-success-class="u-has-success">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <div class="col-md-2">
-                            <label class="h6 small d-block text-uppercase mb-3 mb-lg-0">내용:</label>
-                        </div>
-                        <div class="col-md-10">
-                            <div class="js-form-message">
-                                <div class="js-focus-state input-group form">
-                                    <textarea class="form-control form__input" rows="4"  th:field="*{contents}" required
-                                    placeholder=""
-                                    aria-label=""
-                                    data-msg="Please enter a reason."
-                                    data-error-class="u-has-error"
-                                    data-success-class="u-has-success"></textarea>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                <!-- End Input Form -->
+    <!---->
+    <div th:if="${modify}or${register}">
+        <!-- Contact Us Form -->
+        <form method="post" th:object="${board}">
+            <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+            <input type="hidden" name="status" th:value="#{CODE.ACTIVE}">
 
-                <div class="row">
-                    <div class="col-md-8 offset-md-4">
-                        <input type="submit" class="btn btn-primary btn-wide" value="입력완료"/>
-                    </div>
+            <!-- INPUT -->
+            <div class="row form-group">
+                <label class="col-sm-2 col-form-label">유형:</label>
+                <div class="col-sm-10">
+                    <select class="custom-select" th:field="*{boardId}">
+                        <option th:each="item : ${selectList}" th:value="${item.id}" th:text="${item.boardName}" th:selected="${item.id} == *{boardId}" ></option>
+                    </select>
                 </div>
-            </form>
-            <!-- End Contact Us Form -->
-        </div>
-        <!-- Contacts Section -->
+            </div>
+            <div class="row form-group">
+                <label class="col-sm-2 col-form-label">제목:</label>
+                <div class="col-sm-10">
+                    <input class="form-control" type="text" th:field="*{title}" th:classappend="${#fields.hasErrors('title')}? 'is-invalid'" >
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
+                </div>
+            </div>
+            <div class="row form-group">
+                <label class="col-sm-2 col-form-label">내용:</label>
+                <div class="col-sm-10">
+                    <textarea id="summernote" class="form-control" th:field="*{contents}" th:classappend="${#fields.hasErrors('contents')}? 'is-invalid'" ></textarea>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('contents')}" th:errors="*{contents}"></div>
+                </div>
+            </div>
+            <!-- END INPUT -->
 
+            <div class="text-center">
+                <input type="submit" class="btn btn-primary btn-wide" value="입력완료"/>
+            </div>
+        </form>
+        <!-- End Contact Us Form -->
     </div>
+    <!-- 등록 끝 -->
 
-    <script th:inline="javascript">
+    <script th:src="@{/vendor/textareaEditor/summernote-lite.js}"></script>
+    <script th:src="@{/vendor/textareaEditor/lang/summernote-ko-KR.js}"></script>
+    <script>
         /*<![CDATA[*/
-
+        $('#summernote').summernote({
+            lang: 'ko-KR',
+            placeholder: '내용을 입력해주세요',
+            tabsize: 2,
+            height: 300
+        });
         /*]]>*/
     </script>
 </section>
