--- a/src/main/resources/templates/admin/depositList.html
+++ b/src/main/resources/templates/admin/depositList.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="admin/adminDefault" >
 <section layout:fragment="content">
-    <main id="content" role="main">
-        <span class="h4 m-0 p-0" >입출금관리</span>
-        <hr class="mt-1">
-        <!--검색창-->
-        <!--<div class="row" >
-            <div class="col-2 px-1"><a role="button" class="btn btn-primary btn-block btn-sm"
-                                       th:classappend="${param.areaId} == null? btn-primary : btn-secondary"
-                                       th:href="@{list(perPageNum=${pageMaker.cri.perPageNum})}">전체</a></div>
-            <div th:each="area : ${areaList}">
-                <div class="col-2 px-1"><a role="button" class="btn btn-sm" aria-pressed="true"
-                                           th:href="@{list(areaId=*{area.id},perPageNum=${pageMaker.cri.perPageNum})}" th:text="*{area.areaName}"
-                                           th:classappend="${#strings.equals(param.areaId, #strings.toString(area.id))} ? btn-primary : btn-secondary"  ></a></div>
-            </div>
-        </div>-->
+    <div class="mb-2">
+        <span class="h4" >입출금관리 </span>
+    </div>
+
+    <!--검색창-->
+    <div class="row" >
+        <div class="col-12 px-1">
+            <a role="button" class="btn btn-primary btn-sm"
+                                th:classappend="${param.status} == null? btn-primary : btn-secondary"
+                                th:href="@{list(perPageNum=${pageMaker.cri.perPageNum})}">전체</a>
+            <a role="button" class="btn btn-sm btn-secondary" aria-pressed="true"
+               th:href="@{list(status=#{CODE.START},perPageNum=${pageMaker.cri.perPageNum})}"  >입금대기</a>
+            <a role="button" class="btn btn-sm btn-secondary" aria-pressed="true"
+               th:href="@{list(status=#{CODE.END},perPageNum=${pageMaker.cri.perPageNum})}" >입금완료</a>
+        </div>
+    </div>
 
         <!--입출금목록-->
         <div class="space-1">
@@ -29,129 +31,52 @@
                     <th class="text-sm-center">입금액</th>
                     <th class="text-sm-center">메모</th>
                     <th class="text-sm-center">등록일</th>
-                    <th class="text-sm-center">변경일</th>
                     <th class="text-sm-center">만료일</th>
-                    <th class="text-sm-center" colspan="3"></th>
+                    <th class="text-sm-center"></th>
                 </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td><span>입금대기</span></td><!--지역-->
-                        <td><span>id</span><input class="form-control form-control-sm" style="display: none" type="number" name="size1"/></td>
-                        <td><span>오오</span><input class="form-control form-control-sm" style="display: none" type="number" name="size2"/></td>
-                        <td><span>일반</span><input class="form-control form-control-sm" style="display: none" type="number" name="size3"/></td>
-                        <td><input class="form-control form-control-sm" type="number" name="size4"/></td>
-                        <td><input class="form-control form-control-sm" type="number" name="size4"/></td>
-                        <td><input class="form-control form-control-sm" type="number" name="size4"/></td>
-                        <td><span>2017.12.12</span></td><!--적용일-->
-                        <td><span>2017.12.12</span></td><!--적용일-->
-                        <td><span>2020.12.12</span></td><!--적용일-->
-                        <td><button type="button" class="btn btn-xs py-1 btn-secondary updateBtn updateBtnTg" >등급변경</button></td><!--수정-->
-                        <td><button type="button" class="btn btn-xs py-1 btn-secondary updateBtn updateBtnTg" >수정</button>
-                            <button type="button" class="btn btn-xs py-1 btn-secondary updateCancelBtn updateBtnTg" style="display: none" >취소</button>
-                            <button class="btn btn-xs py-1 btn-primary updateBtnTg" style="display: none" >완료</button>
-                        </td><!--수정-->
-                        <td><button type="button" class="btn btn-xs py-1 btn-danger updateBtnTg"
-                                    data-toggle="modal"
-                                    data-target="#exampleModal"
-                                    data-title="삭제"
-                                    data-body="삭제하시겠습니까?"
-                                    >삭제</button>
-                        </td><!--삭제-->
-                        <!--<td><a th:href="@{'/admin/user?id=' + ${user.id}}">더보기</a></td>-->
-                    </tr>
                     <form th:action="@{mod}" method="post" th:each="info,index : ${infoList}">
                         <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                         <input type="hidden" name="id" th:value="${info.id}">
+                        <input type="hidden" name="userId" th:value="${info.userId}">
                         <tr>
                             <td><span th:text="${info.status} == #{CODE.END} ? '입금완료' : '입금대기'"></span></td><!--지역-->
-                            <td><span th:text="${info.userId}"></span>ㅇ<input class="form-control form-control-sm" style="display: none" type="number" name="size1"/></td><!--왕-->
-                            <td><span th:text="${info.userName}"></span><input class="form-control form-control-sm" style="display: none" type="number" name="size2"/></td><!--특-->
-                            <td><span th:text="${info.role.roleName}"></span><input class="form-control form-control-sm" style="display: none" type="number" name="size3"/></td><!--대-->
-                            <td><span th:text="${info.reqName}"></span><input class="form-control form-control-sm" style="display: none" type="number" name="size4"/></td><!--중-->
-                            <td><span th:text="${info.deposit}"></span><input class="form-control form-control-sm" style="display: none" type="number" name="size5"/></td><!--소-->
-                            <td><span th:text="${info.memo}"></span><input class="form-control form-control-sm" style="display: none" type="number" name="size6"/></td><!--경-->
+                            <td><span th:text="${info.userId}"></span></td><!--왕-->
+                            <td><span th:text="${info.userName}"></span></td><!--특-->
+                            <td>
+                                <select class="form-control-plaintext form-control-sm"  readonly="true" name="role">
+                                    <option value="USER" th:text="#{ROLE.USER}" th:selected="${info.role.name == 'USER'}"></option>
+                                    <option value="STORE" th:text="#{ROLE.STORE}" th:selected="${info.role.name == 'STORE'}"></option>
+                                    <option value="RETAILER" th:text="#{ROLE.RETAILER}" th:selected="${info.role.name == 'RETAILER'}"></option>
+                                    <option value="WHOLESALER" th:text="#{ROLE.WHOLESALER}" th:selected="${info.role.name == 'WHOLESALER'}"></option>
+                                    <option value="PARTNER" th:text="#{ROLE.PARTNER}" th:selected="${info.role.name == 'PARTNER'}"></option>
+                                    <option value="AGENT" th:text="#{ROLE.AGENT}" th:selected="${info.role.name == 'AGENT'}"></option>
+                                </select>
+                            </td><!--대-->
+                            <td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.reqName}" name="reqName"  /></td>
+                            <td><input class="form-control-plaintext form-control-sm" readonly="true" type="number" th:value="${info.deposit}" name="deposit}"  /></td>
+                            <td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.memo}" name="memo"  /></td>
                             <td><span th:text="${#dates.format(info.regDate, 'yyyy.MM.dd')}"></span></td><!--적용일-->
-                            <td><span th:text="${#dates.format(info.updateDate, 'yyyy.MM.dd')}"></span></td><!--적용일-->
                             <td><span th:text="${#dates.format(info.expireDate, 'yyyy.MM.dd')}"></span></td><!--적용일-->
-                            <td><button type="button" class="btn btn-xs py-1 btn-secondary updateBtn updateBtnTg" >등급변경</button></td><!--수정-->
                             <td><button type="button" class="btn btn-xs py-1 btn-secondary updateBtn updateBtnTg" >수정</button>
                                 <button type="button" class="btn btn-xs py-1 btn-secondary updateCancelBtn updateBtnTg" style="display: none" >취소</button>
                                 <button class="btn btn-xs py-1 btn-primary updateBtnTg" style="display: none" >완료</button>
-                            </td><!--수정-->
-                            <td><button type="button" class="btn btn-xs py-1 btn-danger updateBtnTg"
-                                        data-toggle="modal"
-                                        data-target="#exampleModal"
-                                        data-title="삭제"
-                                        data-body="삭제하시겠습니까?"
-                                        th:data-confirm="@{remove(infoId=${info.id})}">삭제</button>
+                                <button type="button" class="btn btn-xs py-1 btn-danger updateBtnTg"
+                                            data-toggle="modal"
+                                            data-target="#exampleModal"
+                                            data-title="삭제"
+                                            data-body="삭제하시겠습니까?"
+                                            th:data-confirm="@{remove(infoId=${info.id})}">삭제</button>
                             </td><!--삭제-->
                             <!--<td><a th:href="@{'/admin/user?id=' + ${user.id}}">더보기</a></td>-->
                         </tr>
                     </form>
                 </tbody>
             </table>
-
-
-            <!--<form th:action="@{register}" method="post" onsubmit="return frmsubmit();" >
-                <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                <tr id="inputTr" style="display: none">
-                    <td><select class="form-control form-control-sm" name="areaId">
-                        <option selected value="1" sele>서울</option>
-                        <option value="2">대전</option>
-                        <option value="3">영주</option>
-                        <option value="4">부산</option>
-                        <option value="5">대구</option>
-                        <option value="6">광주</option>
-                        <option value="7">전주</option>
-                        <option value="8">충북</option>
-                    </select>
-                    </td>&lt;!&ndash;지역&ndash;&gt;
-                    <td><span th:text="${#dates.format(#dates.createNow(), 'yyyy.MM.dd')}"></span></td>&lt;!&ndash;적용일&ndash;&gt;
-                    <td><input class="form-control form-control-sm" type="number" name="size1"/></td>&lt;!&ndash;왕&ndash;&gt;
-                    <td><input class="form-control form-control-sm" type="number" name="size2"/></td>&lt;!&ndash;왕&ndash;&gt;
-                    <td><input class="form-control form-control-sm" type="number" name="size3"/></td>&lt;!&ndash;왕&ndash;&gt;
-                    <td><input class="form-control form-control-sm" type="number" name="size4"/></td>&lt;!&ndash;왕&ndash;&gt;
-                    <td><input class="form-control form-control-sm" type="number" name="size5"/></td>&lt;!&ndash;왕&ndash;&gt;
-                    <td><input class="form-control form-control-sm" type="number" name="size6"/></td>&lt;!&ndash;왕&ndash;&gt;
-                    <td><input class="form-control form-control-sm" type="text" name="memo"/></td>&lt;!&ndash;왕&ndash;&gt;
-                    <td><button type="button" class="btn btn-xs btn-secondary" onclick="invisibleInputTr()" >취소</button></td>&lt;!&ndash;수정&ndash;&gt;
-                    <td><button class="btn btn-xs btn-primary">등록</button></td>&lt;!&ndash;수정&ndash;&gt;
-                    &lt;!&ndash;<td><a th:href="@{'/admin/user?id=' + ${user.id}}">더보기</a></td>&ndash;&gt;
-                </tr>
-            </form>-->
-
-
-            <!--<a role="button" class="btn btn-primary" th:unless="${pageMaker.endPage} == ${pageMaker.cri.page}"
-              th:href="@{/admin/priceInfo(page=${pageMaker.cri.page}+1,perPageNum=${pageMaker.cri.perPageNum})}">더보기</a>-->
-            <nav class="row">
-                <ul class="col-3 pagination justify-content-between" >
-                    <li class="">총 목록개수 : <span th:text="${pageMaker.totalCount}"></span></li>
-                    <li class="">
-                        <select class="form-control form-control-sm" id="perPageNum">
-                            <option th:selected="${pageMaker.cri.perPageNum} == 10" value="10" sele>10</option>
-                            <option th:selected="${pageMaker.cri.perPageNum} == 20" value="20">20</option>
-                            <option th:selected="${pageMaker.cri.perPageNum} == 30" value="30">30</option>
-                            <option th:selected="${pageMaker.cri.perPageNum} == 50" value="50">50</option>
-                            <option th:selected="${pageMaker.cri.perPageNum} == 100" value="100">100</option>
-                     </select>
-                    </li>
-                </ul>
-                <ul class="col-9 pagination justify-content-end">
-
-                    <li  class="page-item" th:if="${pageMaker.prev} == true">
-                        <a class="page-link" th:href="@{list(page=${pageMaker.startPage}-1,perPageNum=${pageMaker.cri.perPageNum},areaId=${param.areaId})}">이전</a>
-                    </li>
-
-                    <li  class="page-item" th:each="idx,iterStat : ${#numbers.sequence(pageMaker.startPage,pageMaker.endPage)}"  th:classappend="${pageMaker.cri.page} == ${idx} ? active : null">
-                        <a class="page-link" th:href="@{list(page=${idx},perPageNum=${pageMaker.cri.perPageNum},areaId=${param.areaId})}" th:text="${idx}"></a>
-                    </li>
-
-                    <li  class="page-item" th:if="${pageMaker.next} == true and ${pageMaker.endPage > 0}">
-                        <a class="page-link" th:href="@{list(page=${pageMaker.endPage}+1,perPageNum=${pageMaker.cri.perPageNum},areaId=${param.areaId})}">다음</a>
-                    </li>
-                </ul>
-            </nav>
+            <span th:with="url=${@urlService.parseParamLeaf(search)}">
+                <div th:replace="layout/pageMaker :: pageMaker('list',${url})"></div>
+            </span>
 
         </div>
 
@@ -175,35 +100,11 @@
                 </div>
             </div>
         </div>
-    </main>
 
     <script th:inline="javascript">
         /*<![CDATA[*/
 
-        function frmsubmit() {
-            if($("#inputTr input").val() == ''){
-                alert("값을 입력해주세요")
-                return false;
-            }
-            return true;
-        }
-
-        function visibleInputTr(){
-            $("#inputTr").show();
-        }
-
-        function invisibleInputTr(){
-            $("#inputTr").hide();
-            $("#inputTr input").val("");
-        }
-
         $(document).on('ready', function () {
-
-            $("#perPageNum").on('change',function (event) {
-                $(this).val();
-                var areaId = [[${param.areaId}]] == null ? '' : [[${param.areaId}]];
-                location.href = "list?perPageNum=" + $(this).val() + "&areaId=" + areaId;
-            });
 
             $('#exampleModal').on('show.bs.modal', function (event) {
                 var button = $(event.relatedTarget); // Button that triggered the modal
@@ -225,24 +126,15 @@
 
             });
 
-            $('.updateBtn').on('click', function (event) {
-                var modal = $(this);
-                console.log(modal.parents("tr").html());
-                modal.parents("tr").find(".form-control").prev().hide();
-                modal.parents("tr").find(".form-control").each(function (index, value) {
-                    $(this).val($(this).prev().html());
-                })
-                modal.parents("tr").find(".form-control").show();
-                modal.parents("tr").find(".updateBtnTg").toggle();
+            $('.updateBtn, .updateCancelBtn').on('click', function (event) {
+                var inputs = $(this).parents("tr").find(".form-control-sm");
+                inputs.prop('readonly',function(i,r){
+                    return !r;
+                });
+                inputs.toggleClass("form-control-plaintext");// show();
+                inputs.toggleClass("form-control");// show();
+                $(this).parents("tr").find(".updateBtnTg").toggle();
             });
-
-            $('.updateCancelBtn').on('click', function (event) {
-                var modal = $(this);
-                modal.parents("tr").find(".form-control").prev().show();
-                modal.parents("tr").find(".form-control").hide();
-                modal.parents("tr").find(".updateBtnTg").toggle();
-            });
-
 
         });
 
