--- a/src/main/resources/templates/admin/productList.html
+++ b/src/main/resources/templates/admin/productList.html
@@ -1,107 +1,92 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="admin/adminDefault" >
 <section layout:fragment="content">
-    <main id="content" role="main">
-        <span class="h4 m-0 p-0" >상품관리</span>
-        <hr class="mt-1">
+    <div class="mb-2">
+        <span class="h4" >상품관리 </span> <a role="button" class="btn btn-primary btn-xs" th:href="@{register}">상품등록</a>
+    </div>
 
-        <!-- ========== MAIN CONTENT ========== -->
-        <div class="space-1">
-            <table class="table table-bordered table-responsive-sm table-sm table-hover">
-                <thead>
-                <tr class="table-secondary">
-                    <th class="text-sm-center">NO</th>
-                    <th class="text-sm-center">상품명</th>
-                    <th class="text-sm-center">사이즈</th>
-                    <th class="text-sm-center">가격</th>
-                    <th class="text-sm-center">등록일</th>
-                    <th class="text-sm-center" colspan="3"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="info,row : ${productList}">
-                    <td><span th:text="${row.index} +1 "></span></td>
-                    <td><span th:text="${info.name}"></span></td>
-                    <td><span th:text="${info.size}"></span></td>
-                    <td><span th:text="${info.cost}"></span></td>
-                    <td><span th:text="${#dates.format(info.regDate, 'yyyy.MM.dd')}"></span></td><!--적용일-->
-                    <td><button type="button" class="btn btn-xs py-1 btn-secondary updateBtn updateBtnTg" >수정</button>
-                    </td><!--수정-->
-                    <td><button type="button" class="btn btn-xs py-1 btn-danger updateBtnTg"
-                                data-toggle="modal"
-                                data-target="#exampleModal"
-                                data-title="삭제"
-                                data-body="삭제하시겠습니까?"
-                                th:data-confirm="@{remove(id=${info.id})}">삭제</button>
-                    </td><!--삭제-->
-                    <!--<td><a th:href="@{'/admin/user?id=' + ${user.id}}">더보기</a></td>-->
-                </tr>
-                </tbody>
-            </table>
+    <!-- ========== MAIN CONTENT ========== -->
+    <div class="space-1">
+        <table class="table table-bordered table-responsive-sm table-sm table-hover">
+            <thead>
+            <tr class="table-secondary">
+                <th class="text-sm-center">NO</th>
+                <th class="text-sm-center">상품명</th>
+                <th class="text-sm-center">사이즈</th>
+                <th class="text-sm-center">소비자가</th>
+                <th class="text-sm-center">소매가</th>
+                <th class="text-sm-center">소매유통가</th>
+                <th class="text-sm-center">도매유통가</th>
+                <th class="text-sm-center">파트너가</th>
+                <th class="text-sm-center">대리점가</th>
+                <!-- TODO 관리자만 보임 <th class="text-sm-center">원가</th>-->
+                <th class="text-sm-center">등록일</th>
+                <th class="text-sm-center"></th>
+            </tr>
+            </thead>
+            <tbody>
+                <form th:action="@{modPrice}" method="post" th:each="info,index : ${productList}">
+                    <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                    <input type="hidden" name="productId" th:value="${info.id}">
+                    <tr>
+                        <td><span th:text="${index.index} +1 "></span></td>
+                        <td><a th:href="@{read(id=${info.id})}"><span th:text="${info.name}"></span></a></td>
+                        <td><span th:text=" #{SIZE__${info.size}__}"></span></td>
+                        <td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.consumer}" name="consumer"  /></td>
+                        <td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.store}" name="store"  /></td>
+                        <td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.retail}" name="retail"  /></td>
+                        <td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.wholesale}" name="wholesale"  /></td>
+                        <td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.partner}" name="partner"  /></td>
+                        <td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.agent}" name="agent"  /></td>
+                        <!--<td><input class="form-control-plaintext form-control-sm" readonly="true" type="text" th:value="${info.cost}" name="cost"  /></td>-->
+                        <td><span th:text="${#dates.format(info.regDate, 'yyyy.MM.dd')}"></span></td>
+                        <td><button type="button" class="btn btn-xs py-1 btn-secondary updateBtn updateBtnTg" >가격수정</button>
+                            <button type="button" class="btn btn-xs py-1 btn-secondary updateCancelBtn updateBtnTg" style="display: none" >취소</button>
+                            <button class="btn btn-xs py-1 btn-primary updateBtnTg" style="display: none" >완료</button>
+                            <button type="button" class="btn btn-xs py-1 btn-danger updateBtnTg"
+                                    data-toggle="modal"
+                                    data-target="#exampleModal"
+                                    data-title="삭제"
+                                    data-body="삭제하시겠습니까?"
+                                    th:data-confirm="@{remove(id=${info.id})}">삭제</button>
+                        </td><!--삭제-->
+                    </tr>
+                </form>
+            </tbody>
+        </table>
 
-            <!--<a role="button" class="btn btn-primary" th:unless="${pageMaker.endPage} == ${pageMaker.cri.page}"
-              th:href="@{/admin/priceInfo(page=${pageMaker.cri.page}+1,perPageNum=${pageMaker.cri.perPageNum})}">더보기</a>-->
-            <nav class="row">
-                <ul class="col-3 pagination justify-content-between" >
-                    <li class="">총 목록개수 : <span th:text="${pageMaker.totalCount}"></span></li>
-                    <li class="">
-                        <select class="form-control form-control-sm" id="perPageNum">
-                            <option th:selected="${pageMaker.cri.perPageNum} == 10" value="10" sele>10</option>
-                            <option th:selected="${pageMaker.cri.perPageNum} == 20" value="20">20</option>
-                            <option th:selected="${pageMaker.cri.perPageNum} == 30" value="30">30</option>
-                            <option th:selected="${pageMaker.cri.perPageNum} == 50" value="50">50</option>
-                            <option th:selected="${pageMaker.cri.perPageNum} == 100" value="100">100</option>
-                        </select>
-                    </li>
-                </ul>
-                <ul class="col-9 pagination justify-content-end">
+        <span th:with="url=${@urlService.parseParamLeaf(search)}">
+            <div th:replace="layout/pageMaker :: pageMaker('list',${url})"></div>
+        </span>
+    </div>
 
-                    <li  class="page-item" th:if="${pageMaker.prev} == true">
-                        <a class="page-link" th:href="@{list(page=${pageMaker.startPage}-1,perPageNum=${pageMaker.cri.perPageNum},areaId=${param.areaId})}">이전</a>
-                    </li>
-
-                    <li  class="page-item" th:each="idx,iterStat : ${#numbers.sequence(pageMaker.startPage,pageMaker.endPage)}"  th:classappend="${pageMaker.cri.page} == ${idx} ? active : null">
-                        <a class="page-link" th:href="@{list(page=${idx},perPageNum=${pageMaker.cri.perPageNum},areaId=${param.areaId})}" th:text="${idx}"></a>
-                    </li>
-
-                    <li  class="page-item" th:if="${pageMaker.next} == true and ${pageMaker.endPage > 0}">
-                        <a class="page-link" th:href="@{list(page=${pageMaker.endPage}+1,perPageNum=${pageMaker.cri.perPageNum},areaId=${param.areaId})}">다음</a>
-                    </li>
-                </ul>
-            </nav>
-
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">코리아에그</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+                    <button type="button" class="btn btn-primary" id="confirmBtn">확인</button>
+                </div>
+            </div>
         </div>
-        <a role="button" class="btn btn-primary" th:href="@{register}">상품등록</a>
-
-    </main>
+    </div>
 
     <script th:inline="javascript">
         /*<![CDATA[*/
 
-        function frmsubmit() {
-            if($("#inputTr input").val() == ''){
-                alert("값을 입력해주세요")
-                return false;
-            }
-            return true;
-        }
-
-        function visibleInputTr(){
-            $("#inputTr").show();
-        }
-
-        function invisibleInputTr(){
-            $("#inputTr").hide();
-            $("#inputTr input").val("");
-        }
 
         $(document).on('ready', function () {
 
-            $("#perPageNum").on('change',function (event) {
-                $(this).val();
-                var areaId = [[${param.areaId}]] == null ? '' : [[${param.areaId}]];
-                location.href = "list?perPageNum=" + $(this).val() + "&areaId=" + areaId;
-            });
 
             $('#exampleModal').on('show.bs.modal', function (event) {
                 var button = $(event.relatedTarget); // Button that triggered the modal
@@ -123,22 +108,14 @@
 
             });
 
-            $('.updateBtn').on('click', function (event) {
-                var modal = $(this);
-                console.log(modal.parents("tr").html());
-                modal.parents("tr").find(".form-control").prev().hide();
-                modal.parents("tr").find(".form-control").each(function (index, value) {
-                    $(this).val($(this).prev().html());
-                })
-                modal.parents("tr").find(".form-control").show();
-                modal.parents("tr").find(".updateBtnTg").toggle();
-            });
-
-            $('.updateCancelBtn').on('click', function (event) {
-                var modal = $(this);
-                modal.parents("tr").find(".form-control").prev().show();
-                modal.parents("tr").find(".form-control").hide();
-                modal.parents("tr").find(".updateBtnTg").toggle();
+            $('.updateBtn, .updateCancelBtn').on('click', function (event) {
+                var inputs = $(this).parents("tr").find(".form-control-sm");
+                inputs.prop('readonly',function(i,r){
+                    return !r;
+                });
+                inputs.toggleClass("form-control-plaintext");// show();
+                inputs.toggleClass("form-control");// show();
+                $(this).parents("tr").find(".updateBtnTg").toggle();
             });
 
 
