--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -3,9 +3,8 @@
 
 <section layout:fragment="content">
     <!-- ========== MAIN CONTENT ========== -->
-    <main id="content" role="main">
         <!-- CTA -->
-        <div class="gradient-half-primary-v1 text-center rounded space-1 mt-lg-9">
+        <div th:fragment="header" class="gradient-half-primary-v1 text-center rounded space-1 mt-lg-9">
             <div class="mb-4">
                 <h2 class="h4 text-white">공지사항</h2>
                 <p class="text-white">코리아에그의 공지 및 계란소식을 전해드립니다</p>
@@ -27,11 +26,11 @@
                 </div>
                 <ul class="list-unstyled">
                     <li th:each="board : ${boardList}" class="row board-row text-center">
-                        <div class="col-sm-1 d-none d-sm-block"><span th:text="${board.boardName}" class="text-danger">공지</span></div>
+                        <div class="col-sm-1 d-none d-sm-block"><span th:text="${board.boardName}" class="badge" th:classappend="${board.boardId ==1}? 'badge-danger' : 'badge-primary'"></span></div>
                         <div class="col-12 col-sm-8 text-left">
-                            <span th:text="${board.boardName}" class="badge badge-primary d-block d-sm-none"></span>
-                            <a th:href="@{read(id=${board.id})}"><span th:text="${board.title}" ></span></a>
-                            <span th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="d-block d-sm-none"></span>
+                            <span th:text="${board.boardName}" class="badge d-sm-none" th:classappend="${board.boardId ==1}? 'badge-danger' : 'badge-primary'"></span>
+                            <a th:href="@{read(id=${board.id})}" class="text-dark"><span th:text="${board.title}" ></span></a>
+                            <!--<span th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="d-sm-none small text-muted text-right"></span>-->
                         </div>
                         <div th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="col-sm-2 d-none d-sm-block">2016.05.01</div>
                     </li>
@@ -40,5 +39,4 @@
             <!--END 전체난가정보-->
         </div>
         <!--END 난가정보 section-->
-    </main>
 </section>
