--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -122,8 +122,8 @@
                                 </a>
                             </li>
                             <li sec:authorize="isAuthenticated()" class="nav-item u-header__nav-item u-header__navbar-v-divider d-none d-sm-block">
-                                <a class="nav-link u-header__nav-link" href="/myPage">
-                                    <span class="fa fa-user mr-1"><span sec:authentication="name"></span></span>
+                                <a class="nav-link u-header__nav-link small" href="/mypage">
+                                    <span class="fa fa-user mr-1"><span sec:authentication="name"></span>(<span sec:authentication="principal.shop.name"></span>)
                                 </a>
                             </li>
                             <li sec:authorize="isAuthenticated()" class="nav-item u-header__nav-item d-none d-sm-block">
@@ -143,7 +143,7 @@
                     <!-- End Navigation -->
                     <ul class="navbar-nav flex-row u-header__secondary-nav">
                         <li sec:authorize="isAuthenticated()" class="nav-item u-header__navbar-icon-wrapper u-header__navbar-icon d-block d-sm-none">
-                            <a class="btn btn-xs btn-icon btn-text-dark" href="/myPage">
+                            <a class="btn btn-xs btn-icon btn-text-dark" href="/mypage">
                                 <span class="fa fa-user btn-icon__inner "></span>
                             </a>
                         </li>
