--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -38,14 +38,14 @@
             <div class="col-sm-1 d-none d-sm-block"><a role="button" class="btn btn-xs btn-danger" th:href="@{/cart/revome(id=${item.value.productId})}">삭제</a></div>
           </li>
           <li>
-            <div class="col-12 text-right">
+            <!--<div class="col-12 text-right">
               <strong>Subtotal</strong>
               <strong class="ml-6" th:text="${session.cart.total}"></strong>
-            </div>
-            <div class="col-12 text-right border-bottom">
-              <strong>배송비</strong><!--TODO 배송비 어떻게?-->
+            </div>-->
+           <!-- <div class="col-12 text-right border-bottom">
+              <strong>배송비</strong>&lt;!&ndash;TODO 배송비 어떻게?&ndash;&gt;
               <strong class="ml-6" th:text="${session.cart.total}"></strong>
-            </div>
+            </div>-->
             <div class="col-12 text-right">
               <strong class="h4">Total</strong>
               <strong class="h4 ml-6" th:text="${session.cart.total}"></strong>
