--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -3,13 +3,11 @@
 
 <section layout:fragment="content">
     <!-- ========== MAIN CONTENT ========== -->
-    <main id="content" role="main">
-        <!-- About Section -->
-        <div class="container space-2 space-3--lg">
+        <div class="container space-1 space-3--lg">
             <div class="row align-items-lg-center">
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div class="pr-lg-4">
-                        <img class="img-fluid" th:src="@{/img/test/6_0l.jpg}">
+                        <img class="img-fluid rounded" th:src="@{/img/test/6_0l.jpg}">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -17,7 +15,7 @@
                         <!-- Title -->
                         <h2><strong th:text="${product.name}">상품명</strong></h2>
                         <div><small th:text="${product.subName}">서브상품명</small></div>
-                        <div class="text-muted">소비자가 : <del th:text="${product.consumer}">소비자가</del></div>
+                        <div class="text-dark">소비자가 : <del th:text="${product.consumer}" th:remove="tag">소비자가</del></div>
                         <div class="h4 my-2" th:if="${product.consumer} != ${product.price}"><span class="badge badge-pill badge-danger mr-2">할인가</span>
                             <strong class="text-danger" th:text="${product.price}">할인가</strong></div>
                         <!-- End Title -->
@@ -34,26 +32,37 @@
                         <hr class="my-2">
                         <div class="row align-items-center">
                             <div class="col-3 mb-3">
-                                <input type="text" class="form-control form-control-sm" placeholder="수량" />
+                                <input type="text" class="form-control form-control-sm" placeholder="수량" value="1" id="qty"/>
                             </div>
                             <div class="col-9">
-                                <input type="range" class="custom-range" min="0" max="5" step="0.5" id="customRange3" />
+                                <input type="range" class="custom-range" min="0" max="1000" step="100" id="qty_range" />
                             </div>
                         </div>
                         <div class="">
-                            <a th:href="@{/cart/add(id=${product.id})}" role="button" class="btn-wide btn btn-outline-primary btn-sm">장바구니담기</a>
+                            <button th:href="@{/cart/add(id=${product.id})}" class="btn-wide btn btn-outline-primary btn-sm" th:onclick="'javascript:addCart( ' + ${product.id} + ');'">장바구니담기</button>
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-12" th:utext="${product.contents}"></div>
             </div>
         </div>
-        <!-- End About Section -->
-        <!-- History Section -->
-        <div class="container">
-            <div class="align-items-lg-center" th:text="${product.contents}">
-
-            </div>
-        </div>
-    </main>
     <!-- ========== END MAIN CONTENT ========== -->
+    <script>
+        /*<![CDATA[*/
+        $(document).on('ready', function () {
+            $('#qty_range').on("change mousemove", function() {
+                console.log($(this).val());
+                var qty = $(this).val() == 0? 1 : $(this).val();
+                $("#qty").val(qty);
+            });
+
+
+        });
+
+        function addCart(pId) {
+            location.href = "/cart/add" +"?id="+pId + "&qty="+$("#qty").val();
+        }
+
+        /*]]>*/
+    </script>
 </section>
